# dcp

./: .gitignore  .mcp.json.example  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.3.0.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: greet.yml  test.yml
docs/: ADDING_FEATURES.md  QUICKSTART_VIDEO.md  RATIONALE.md
docs/paper/: README.md  build-arxiv.ps1  main.tex  refs.bib
docs/paper/figures/: README.md  footprint_data.json  hallucination_data.json  latency_data.json  make_figures.py  measure_footprint.py
docs/site/: .gitignore  README.md  index.html  package.json  vite.config.js
docs/site/src/: App.vue  style.css
docs/site/src/components/: ArchitectureSection.vue  CompareSection.vue  HeroSection.vue  (+5 more)
examples/: grid_demo_manifest.yaml  lamp_demo.py  lamp_manifest.yaml  smart_panel_manifest.yaml
firmware/esp32/: README.md  library.properties
firmware/esp32/src/: DCP.cpp  DCP.h  DCPBle.cpp  DCPBle.h  DCPCrypto.cpp  DCPCrypto.h
src/dcp/: __init__.py  bridge.py  cli.py  codegen.py  framing.py  manifest.py  mcp_server.py  safety.py  simulator.py  tokens.py  wire.py
src/dcp/transports/: __init__.py  base.py  ble.py  loopback.py  mqtt.py  uart.py
tests/: test_ble_smoke.py  test_bridge.py  test_bridge_tokens.py  test_codegen.py  test_framing.py  test_manifest.py  test_mqtt_smoke.py  test_simulator.py  test_tokens.py  test_wire.py  test_wire_hmac.py
tests/conformance/: README.md  golden_frames.yaml  test_conformance.py
tools/: add_mcp_server.py  bench_hallucination.py  bench_hallucination_empirical.py  bench_latency_iotmcp.py  gen_llm_corpus.py  grid_demo.py  llm_corpus.json  llm_drive_dcp.py  llm_showcase.py  llm_storyboard.py  test_uart_roundtrip.py
web/panel-emu/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/panel-emu/src/: App.vue  demo-scenes.js  style.css
(+8 files in other folders)
