[project]
name = "dcp"
version = "0.3.0"
description = "Device Context Protocol — bridge between LLM agents and physical devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "deeplethe" }]
keywords = ["mcp", "iot", "hardware", "llm", "agent", "device", "protocol"]
dependencies = [
    "cbor2>=5.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
serial = [
    "pyserial-asyncio>=0.6",
]
mqtt = [
    "paho-mqtt>=2.0",
]
ble = [
    "bleak>=0.22",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
dcp = "dcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
